# otus7_bayan

./: CMakeLists.txt  CMakeLists_8txt.html  Doxyfile  README.md  README_8md.html  add__ex1_8cpp.html  add__ex1_8cpp__incl.map  add__ex1_8cpp__incl.md5  annotated.html  classCRC32-members.html  classCRC32.html  classCRC32__coll__graph.map  classCRC32__inherit__graph.md5  classCommandLineProcessor-members.html  classCommandLineProcessor.html  classCommandLineProcessor__coll__graph.md5  classCommandLineProcessor__inherit__graph.map  classFileComparator-members.html  classFileComparator.html  classFileComparator__coll__graph.md5  classFileComparator__inherit__graph.map  classFileScanner-members.html  classFileScanner.html  classFileSizeValidator-members.html  classFileSizeValidator.html  classFileSizeValidator__coll__graph.map  classFileSizeValidator__inherit__graph.md5  classFileValidator-members.html  classFileValidator.html  classFileValidator__coll__graph.md5  classFileValidator__inherit__graph.map  classICommandLineProcessor-members.html  classICommandLineProcessor.html  classICommandLineProcessor__inherit__graph.map  classICommandLineProcessor__inherit__graph.md5  classIFileComparator-members.html  classIFileComparator.html  classIFileComparator__inherit__graph.map  classIFileComparator__inherit__graph.md5  classIFileValidator-members.html  (+183 more)
.github/workflows/: release.yml
include/: cmd_line_processor.h  def.h  file_comparator.h  file_scanner.h  file_validator.h  hash_algorithm.h
my_tests/: file_2.x
my_tests/next/: file_2.x
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+19 more)
src/: cmd_line_processor.cpp  file_comparator.cpp  file_scanner.cpp  file_validator.cpp  hash_algorithm.cpp  main.cpp  test.cpp
(+2 files in other folders)
